# myfish

./: .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  diesel.toml  docker-compose.yml  local.yml
migrations/2024-09-12-221015_create_transaction_table/: up.sql
migrations/2024-09-12-221015_create_transactions_assets_liabilities/: down.sql  up.sql
migrations/2024-09-12-222415_users/: up.sql
src/: database.rs  handlers.rs  main.rs  models.rs  repositories.rs  schema.rs
src/handlers/: handlers.rs  users.rs
src/models/: transactions.rs  users.rs
src/repository/: database.rs
