[package]
name = "myfish"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
chrono = { version = "0.4.38", features = ["serde"] }
diesel = { version = "2.2.4", features = ["chrono", "postgres", "r2d2", "uuid"] }
diesel-async = { version = "0.5.0", features = ["postgres"] }
diesel_migrations = { version = "2.2.0", features = ["postgres"] }
dotenvy = "0.15.7"
env_logger = "0.11.5"
r2d2 = "0.8.10"
serde = { version = "1.0.210", features = ["derive"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
